--- a/settings/internal/com.kms.katalon.core.webservice.properties
+++ b/settings/internal/com.kms.katalon.core.webservice.properties
@@ -1,8 +1,7 @@
-#Thu Jun 25 15:10:11 BST 2020
+#Wed Jul 29 15:09:59 BST 2020
 <<<<<<<=HEAD
 webServiceMethods="[\\n  {\\n    \\"name\\"\: \\"GET\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"POST\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"PUT\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"DELETE\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"PATCH\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"HEAD\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"CONNECT\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"OPTIONS\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"TRACE\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  }\\n]"
 =\=\=\=\=\=\=
->>>>>>>=branch 'master' of https\://github.com/sand273/PINS_ODT_TEST.git
+>>>>>>>=branch 'master' of https\://github.com/sand273/PINS_ODT_TEST
 network.sslCert="BYPASS"
 network.sslClientCert="{\\n  \\"keyStoreFile\\"\: \\"\\",\\n  \\"keyStorePassword\\"\: \\"\\"\\n}"
->>>>>>> branch 'master' of https://github.com/sand273/PINS_ODT_TEST
